Fixed the rescaling of the players in drawPlayersStats